# football-cli

./: .env  .gitignore  README.md  pyproject.toml  setup.cfg
football_cli/: data_preparation.py  exception_handling.py  main.py  models.py  nested_defaultdict.py  nested_panels.py  options_callbacks.py  output_formation.py  request_handler.py  utils.py
football_cli/commands/: competition.py  matches.py  options_validator.py  team.py
football_cli/data/: all_competitions.json  competitions.json  options.json  teams.json
scripts/: demo.sh  shell_completion.sh
